@@ -4,6 +4,7 @@ Changelog
 9.7.dev0 - (unreleased)
 -----------------------
 * Bugfix: set socket timeout to prevent hanging out connection on xmlrpc calling
+* Bugfix: greenening xmlrpclib to prevent hanging out connection
   [lucas refs #29063]
   
 9.6 - (2015-09-22)
